--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <Header>
         <div id="banner">
             <a href="#" ><img src="img/LogoNPoficial.png" alt="logo"></a>
-            <h1>NP FIGHT 18 <br> 16 DE JULHO 2022</h1>
+            <h1>NP FIGHT GOLD <br> 5 DE NOVEMBRO 2022</h1>
         </div>
     </Header>
     <Main>
