--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>NpFight</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/688c941462.js" crossorigin="anonymous"></script>
+
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <Header>
@@ -39,6 +47,7 @@
         <section class="frase-impacto">
             <h2>IT`S TIME ! </h2>
             <p>Está na hora de <span class="destaque-text">sua marca impactar os “MMA maniácos” </span> do Centro-Oeste brasileiro. <br>  Conecte-se ao universo da artes marciais !  </p>s
+            <a href="" class="btn-chamada"><button type="button" class="btn btn-success">Fale conosco</button></a>
         </section>
         <section class="container-info">
             <div class="imagem" id="graund"></div>
@@ -99,6 +108,7 @@
                 <h3>IT`S TIME - É AGORA !</h3>
                 <p>Os holofotes já estão focados em direção
                 à próxima edição do NP FIGHT, que foi configurado para ser um  atrativo de reforço de marca para as empresas que buscam <span class="destaque-text">divulgação das suas marcas no surpreendente segmento esportivo.</span></p>
+                
             </div>
             <img src="img/LOGOHomem.png" alt="">
         </section>
@@ -158,10 +168,7 @@
             <h2>PLANO GOLD</h2>
             <p>R$ 5.000,00 <br>
                 (Cinco Mil Reais)</p>
-                <a href="#" class="contato-btn">
-                    <i class="fa-brands fa-whatsapp"></i>
-                    <span>Fale conosco</span>
-                </a>
+                <a href="" class="btn-chamada"><button type="button" class="btn btn-success">Fale conosco</button></a>
         </section>
         <section class="container-info2">
             <div class="info-text">
